# goit-pythonweb-hw-10

./: env.example  main.py  pyproject.toml
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  users.py
